--- a/manifests/dpf-hcp-provisioner-operator/dpfhcpprovisioner-cr-template.yaml
+++ b/manifests/dpf-hcp-provisioner-operator/dpfhcpprovisioner-cr-template.yaml
@@ -1,5 +1,5 @@
 apiVersion: provisioning.dpu.hcp.io/v1alpha1
-kind: DPFHCPBridge
+kind: DPFHCPProvisioner
 metadata:
   name: <HOSTED_CLUSTER_NAME>
   namespace: <CLUSTERS_NAMESPACE>
@@ -20,11 +20,11 @@ spec:
 
   # Pull secret reference
   pullSecretRef:
-    name: <DPFHCPBRIDGE_PULL_SECRET_NAME>
+    name: <DPFHCPPROVISIONER_PULL_SECRET_NAME>
 
   # SSH key reference
   sshKeySecretRef:
-    name: <DPFHCPBRIDGE_SSH_SECRET_NAME>
+    name: <DPFHCPPROVISIONER_SSH_SECRET_NAME>
 
   # Control plane availability policy
   controlPlaneAvailabilityPolicy: <CONTROL_PLANE_POLICY>
