--- a/ci/env.template
+++ b/ci/env.template
@@ -26,6 +26,8 @@ OVN_TEMPLATE_CHART_URL=${OVN_TEMPLATE_CHART_URL}
 OVN_CHART_VERSION=${OVN_CHART_VERSION}
 OVN_KUBERNETES_IMAGE_REPO=${OVN_KUBERNETES_IMAGE_REPO}
 OVN_KUBERNETES_IMAGE_TAG=${OVN_KUBERNETES_IMAGE_TAG}
+OVN_KUBERNETES_UTILS_IMAGE_REPO=${OVN_KUBERNETES_UTILS_IMAGE_REPO}
+OVN_KUBERNETES_UTILS_IMAGE_TAG=${OVN_KUBERNETES_UTILS_IMAGE_TAG}
 
 # GitOps Operator Configuration
 GITOPS_OPERATOR_CHANNEL=${GITOPS_OPERATOR_CHANNEL}
@@ -48,6 +50,7 @@ DPU_HOST_CIDR=${DPU_HOST_CIDR}
 HBN_OVN_NETWORK=${HBN_OVN_NETWORK}
 API_VIP=${API_VIP}
 INGRESS_VIP=${INGRESS_VIP}
+INJECTOR_RESOURCE_NAME=${INJECTOR_RESOURCE_NAME}
 
 # Pull Secret files
 OPENSHIFT_PULL_SECRET=${OPENSHIFT_PULL_SECRET}
@@ -77,8 +80,10 @@ SLEEP_TIME=${SLEEP_TIME}
 # Paths
 DISK_PATH=${DISK_PATH}
 ISO_FOLDER=${ISO_FOLDER}
+STATIC_NET_FILE=${STATIC_NET_FILE}
 
 # Storage
+STORAGE_TYPE=${STORAGE_TYPE}
 BFB_STORAGE_CLASS=${BFB_STORAGE_CLASS}
 BFB_URL=${BFB_URL}
 
@@ -121,3 +126,9 @@ TFT_REPO_REV=${TFT_REPO_REV}
 TFT_TEST_CASES=${TFT_TEST_CASES}
 TFT_DURATION=${TFT_DURATION}
 TFT_CONNECTION_TYPE=${TFT_CONNECTION_TYPE}
+
+# Sanity Tests
+SANITY_TESTS_PODS_WORKLOAD_FILE=${SANITY_TESTS_PODS_WORKLOAD_FILE}
+SANITY_TESTS_WORKLOAD_NAMESPACE=${SANITY_TESTS_WORKLOAD_NAMESPACE}
+SANITY_TESTS_PING_COUNT=${SANITY_TESTS_PING_COUNT}
+SANITY_TESTS_PING_HBN_TO_HBN_PODS=${SANITY_TESTS_PING_HBN_TO_HBN_PODS}
