allow user to skip storage operators deploy case we have exsisting storageclass

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,11 @@ GITOPS_OPERATOR_CHANNEL=1.16
 GITOPS_OPERATOR_VERSION=v1.16.3
 
 # Storage Configuration for Hypershift etcd
-# STORAGE_TYPE: Choose storage backend for Hypershift etcd
+# SKIP_DEPLOY_STORAGE: Set to true to use existing StorageClasses (no LSO/LVM/ODF deployment).
+#   When true, you must set ETCD_STORAGE_CLASS to a StorageClass that already exists in the cluster.
+#   Scripts validate that the StorageClass exists after cluster install.
+#SKIP_DEPLOY_STORAGE=false
+# STORAGE_TYPE: Choose storage backend for Hypershift etcd (ignored when SKIP_DEPLOY_STORAGE=true)
 #   - lvm: Logical Volume Manager Storage (default, works for SNO and MNO)
 #   - odf: OpenShift Data Foundation (multi-node only, requires 3+ nodes)
 #STORAGE_TYPE=lvm
